--- a/home.html
+++ b/home.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="rtl">
 
@@ -13,164 +14,308 @@
 <body>
     <!--البداية-->
     <header>
+        <!--الوغو -->
         <div class="logo">logo</div>
+        <!--المقدمة والخدمات-->
         <div class="intro">
-            <a href="home.html" class="active">الرئيسية</a>
-            <a href="shares.html">الحصص</a>
-            <a href="whoweare.html">من نحن</a>
-            <a href="contactus.html"> تواصل معنا</a>
-            <a href="contract.html">العقد</a>
-            <a href="questions.html">الأسئلة الشائعة</a>
-            <a href="termsofuse.html">شروط الاستخدام</a>
-            <a href="login.html" class="btn">تسجيل الدخول</a>
+            <a href="../Home page/Home.html" class="active">الرئيسية</a>
+            <a href="../shares page/shares.html">الحصص</a>
+            <a href="../who we are page/whoWeAre.html">من نحن</a>
+            <a href="../contact us page/contactUs.html"> تواصل معنا</a>
+            <a href="../contract page/contract.html">العقد</a>
+            <a href="../questions page/questions.html">الأسئلة الشائعة</a>
+            <a href="../terms of use page/termsOfUse.html">شروط الاستخدام</a>
+            <a href="../log in page/logIn.html" class="btn">تسجيل الدخول</a>
+        </div>
         </div>
     </header>
-
+    <!--صورة الرجل-->
     <div class="man-image">
         <img src="man.png" alt="man">
     </div>
-
+    <!--كرت المستثمرين-->
     <section class="account-card-section">
-        <div class="account-card">
+        <div class=" account-card">
             <div>
                 <h3>المستثمرين</h3>
-                <div class="account-card-contant">
+                <div class=" account-card-contant">
                     <div class="number">5,000</div>
-                    <div><p>مستثمر</p></div>
-                    <div><img src="change.jpg" alt="change"></div>
+                    <div>
+                        <p>مستثمر</p>
+                    </div>
+                    <div><img src="_Change.jpg" alt="_Change"></div>
                 </div>
             </div>
-            <div class="chart-data-img"><img src="chart-data.jpg" alt="Chart data"></div>
+            <div class="chart-data-img"> <img src="_Chart data.jpg" alt="Chart data"></div>
         </div>
     </section>
-
+    <!--text -->
     <section class="text">
-        <h1>استثمر اليوم... وكن شريكًا في نجاح الغد.</h1>
-        <h2>فرصة حقيقية لامتلاك حصة من نمو شركتنا.</h2>
-        <p>استثمر في شركة موثوقة تقدم لك تجربة استثمارية شفافة وآمنة.</p>
-        <button><a href="contactus.html">ابدأ الاستثمار الآن</a></button>
+        <h1>استثمر اليوم... وكن شريكًا في نجاح
+            <br>الغد.
+        </h1>
+        <h2>فرصة حقيقية لامتلاك حصة من نمو شركتنا. <br>
+            تابع أرباحك، وراقب أموالك وهي تنمو بثقة.
+        </h2>
+        <p>استثمر في شركة موثوقة تقدم لك تجربة استثمارية شفافة وآمنة. <br>
+            مع عدد متزايد من المستثمرين، وإمكانيات نمو مستمرة، أنت على <br>
+            بُعد خطوة واحدة من تحقيق أهدافك المالية.
+            </p3>
+            <br>
+            <button><a href="../contact us page/contactUs.html">ابدأ الاستثمار الآن</a></button>
     </section>
-
+    <!--stock price -->
     <section class="stock-price-card">
         <h3>سعر السهم</h3>
         <h2>100$</h2>
+
         <div class="stock-price-contant">
-            <div class="chart-mini-img"><img src="chart-mini.jpg" alt=""></div>
-            <div class="change2-img"><img src="change2.jpg" alt=""></div>
+            <div class="chart-mini-img"> <img src="_Chart mini.jpg" alt=""></div>
+            <div class="change2-img"><img src="_Change2.jpg" alt=""></div>
             <div class="p">ارتفاع في سعر السهم</div>
         </div>
     </section>
-
+    <!--منتجاتنا-->
     <section class="our-products">
         <h2>منتجاتنا</h2>
         <div class="images-abuAlzet">
-            <div><img src="image11.jpg" alt="strong-image"><p>استثمار قوي</p></div>
-            <div><img src="image13.jpg" alt="abuAlzet-logo"><p>استثمار ابو الزيت</p></div>
-            <div><img src="image15.jpg" alt="route-image"><p>استثمار الطريق</p></div>
+            <div>
+                <img src="image 11.jpg" alt="strong-image">
+                <p>استثمار قوي</p>
+            </div>
+            <div>
+                <img src="image 13.jpg" alt="abuAlzet-logo">
+                <p>استثمار ابو الزيت</p>
+            </div>
+            <div>
+                <img src="image 15.jpg" alt="route-image">
+                <p>استثمار الطريق</p>
+            </div>
+
         </div>
     </section>
-
+    <!--شارك في مستقبلك المالي-->
     <section class="financial-future">
-        <img src="circle.png" alt="">
+         <img src="home page images/circle.png" alt="">
         <div class="financial-future-div">
-            <h2>شارك في بناء مستقبلك المالي</h2>
-            <p>استثمارات آمنة تناسب أهدافك المالية</p>
-            <button><a href="contactus.html">ابدأ الاستثمار الآن</a></button>
+           <div>   <h2>شارك في بناء مستقبلك المالي</h2></div>
+           <div> <p>استثمارات آمنة تناسب أهدافك المالية</p></div>
+           <div>  <button><a href="../contact us page/contactUs.html">ابدأ الاستثمار الآن</a></button></div>
         </div>
     </section>
-
+    <!--لماذا تختارنا-->
     <section class="why-choose-us">
         <h2>لماذا تختارنا؟</h2>
         <h3>شريكك المثالي في رحلة الاستثمار والنمو المالي</h3>
-        <p>نحن نؤمن بأن الاستثمار الناجح يبدأ بالثقة والشفافية...</p>
+        <p>نحن نؤمن بأن الاستثمار الناجح يبدأ بالثقة والشفافية. نقدم لك حلولاً استثمارية مبتكرة مدعومة بفريق من الخبراء
+            المعتمدين، مع تقارير دورية شفافة تمكنك</p>
+        <p>من اتخاذ قرارات مدروسة ومتابعة نمو استثماراتك بثقة تامة.</p>
         <div class="financial-future-groups">
             <div class="group1">
-                <h4>اكتشف المميزات</h4>
+                <h4>اكتشف المميزات التي تجعلنا الخيار الأمثل</h4>
+                <h5>نحن نقدم خدمات استثمارية متميزة تجمع بين الأمان والشفافية والاحترافية،
+                    <br> مع فريق متخصص يضمن تحقيق أهدافك المالية.
+                </h5>
                 <div class="check">
-                    <div class="item"><img src="check-icon.jpg" alt=""><h6>خبرة متخصصة</h6></div>
-                    <div class="item"><img src="check-icon.jpg" alt=""><h6>شفافية كاملة</h6></div>
-                    <div class="item"><img src="check-icon.jpg" alt=""><h6>متابعة مستمرة</h6></div>
-                    <div class="item"><img src="check-icon.jpg" alt=""><h6>استشارات مالية</h6></div>
-                    <div class="item"><img src="check-icon.jpg" alt=""><h6>حماية قانونية</h6></div>
-                    <div class="item"><img src="check-icon.jpg" alt=""><h6>تقارير دورية</h6></div>
-                    <div class="item"><img src="check-icon.jpg" alt=""><h6>مرونة</h6></div>
-                    <div class="item"><img src="check-icon.jpg" alt=""><h6>دعم فني</h6></div>
+
+                    <div class="item">
+                        <div> <img src="Check icon.jpg" alt=""></div>
+                        <div>
+                            <h6>خبرة متخصصة في إدارة الاستثمارات</h6>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div><img src="Check icon.jpg" alt=""></div>
+                        <div>
+                            <h6>شفافية كاملة في جميع العمليات المالية</h6>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div> <img src="Check icon.jpg" alt=""></div>
+                        <div>
+                            <h6>متابعة مستمرة لأداء محفظتك الاستثمارية</h6>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div><img src="Check icon.jpg" alt=""></div>
+                        <div>
+                            <h6>استشارات مالية من فريق معتمد</h6>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div><img src="Check icon.jpg" alt=""></div>
+                        <div>
+                            <h6>حماية قانونية شاملة لاستثماراتك</h6>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div><img src="Check icon.jpg" alt=""></div>
+                        <div>
+                            <h6>تقارير دورية مفصلة وواضحة</h6>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div> <img src="Check icon.jpg" alt=""></div>
+                        <div>
+                            <h6>مرونة في التعامل مع خططك الاستثمارية</h6>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div> <img src="Check icon.jpg" alt=""></div>
+                        <div>
+                            <h6>دعم فني متاح على مدار الساعة</h6>
+                        </div>
+                    </div>
                 </div>
+
             </div>
             <div class="group2">
-                <div class="card1"><h3>نسبة النمو</h3><p>25%</p></div>
-                <div class="card2"><h3>مستثمر راضي</h3><p>4,000+</p></div>
-                <div class="card3"><h3>تقييم إيجابي</h3><p>200+</p></div>
+                <div class="card1">
+                    <h3>نسبة النمو السنوي</h3>
+                    <p>25%</p>
+                </div>
+                <div class="card2">
+                    <h3>مستثمر راضي</h3>
+                    <p>4,000+</p>
+                </div>
+                <div class="card3">
+                    <h3>تقييم إيجابي</h3>
+                    <p>200+</p>
+                </div>
             </div>
         </div>
     </section>
-
+    <!--خطط استثمارية متنوعة-->
     <section class="investment-plans">
-        <img src="line-pattern.png" alt="" class="image1-in-investment-plans">
+        <img src="Line pattern.png" alt="lines" class="image1-in-investment-plans">
         <div class="investment-plans-div">
-            <h2>خطط استثمارية متنوعة</h2>
-            <p>حلول استثمارية مبتكرة تناسب جميع المستثمرين</p>
-            <button><a href="contactus.html">تعرف على الخطط</a></button>
+         <div><h2>خطط استثمارية متنوعة</h2></div>
+         <div><p>حلول استثمارية مبتكرة تناسب جميع المستثمرين</p></div>
+         <div>   <button><a href="../contact us page/contactUs.html">تعرف على الخطط</a></button></div>
         </div>
-        <img src="line-pattern.png" alt="" class="image2-in-investment-plans">
+        <img src="Line pattern.png" alt="lines" class="image2-in-investment-plans">
     </section>
-
+    <!--حصصنا الاستثمارية-->
     <section class="investment-shares">
         <h2>حصصنا الاستثمارية</h2>
-        <h3>تجاوزنا التوقعات بثقة المستثمرين المتزايدة.</h3>
+        <h3>بدأنا بعدد محدود من الحصص عند الإطلاق، لكن مع مرور الوقت وثقة المستثمرين المتزايدة، تجاوزنا التوقعات.</h3>
         <div class="investment-shares-groups">
+            
             <div class="investment-shares-image">
-                <img src="line-and-bar-chart.jpg" alt="Line and bar">
+                <img src="Line and bar chart.jpg" alt="Line and bar">
             </div>
+
+            <!--الاعداد المطروحة-->
             <div class="offered-shares">
-                <h4><b>%</b><strong>800</strong> زيادة في اعداد الحصص</h4>
-                <div class="item"><img src="check-icon.jpg" alt=""><h6>فرص مدروسة</h6></div>
-                <div class="item"><img src="check-icon.jpg" alt=""><h6>خطط مناسبة</h6></div>
-                <div class="item"><img src="check-icon.jpg" alt=""><h6>متابعة استثمار</h6></div>
-                <div class="item"><img src="check-icon.jpg" alt=""><h6>استشارات متخصصة</h6></div>
-                <div class="item"><img src="check-icon.jpg" alt=""><h6>حماية قانونية</h6></div>
-                <div class="item"><img src="check-icon.jpg" alt=""><h6>تقارير واضحة</h6></div>
-                <div class="item"><img src="check-icon.jpg" alt=""><h6>مرونة بالإدارة</h6></div>
-                <div class="item"><img src="check-icon.jpg" alt=""><h6>فريق متخصص</h6></div>
+                <h4><b>%</b> <strong>800</strong> زيادة في اعداد الحصص المطروحة </h4>
+                <div class="item">
+                    <div> <img src="Check icon.jpg" alt=""></div>
+                    <div>
+                        <h6>فرص استثمارية مدروسة بعناية</h6>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div><img src="Check icon.jpg" alt=""></div>
+                    <div>
+                        <h6>خطط استثمارية تناسب احتياجاتك</h6>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div> <img src="Check icon.jpg" alt=""></div>
+                    <div>
+                        <h6>متابعة مستمرة لأداء استثماراتك</h6>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div><img src="Check icon.jpg" alt=""></div>
+                    <div>
+                        <h6>استشارات مالية متخصصة</h6>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div><img src="Check icon.jpg" alt=""></div>
+                    <div>
+                        <h6>ماية قانونية كاملة لاستثماراتك</h6>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div><img src="Check icon.jpg" alt=""></div>
+                    <div>
+                        <h6>تقارير دورية مفصلة وواضحة</h6>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div> <img src="Check icon.jpg" alt=""></div>
+                    <div>
+                        <h6>مرونة في إدارة استثماراتك</h6>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div> <img src="Check icon.jpg" alt=""></div>
+                    <div>
+                        <h6>فريق متخصص لخدمة المستثمرين</h6>
+                    </div>
+                </div>
             </div>
         </div>
-    </section>
-
-    <section class="invest-in-projects">
-        <img src="line-pattern.png" alt="" class="image1-invest-in-projects">
-        <div class="invest-in-projects-div">
-            <h2>استثمر في مشاريع واعدة</h2>
-            <p>فرص استثمارية مدروسة بعناية لتنمية رأس مالك</p>
-            <button><a href="contactus.html">اكتشف الفرص</a></button>
         </div>
-        <img src="line-pattern.png" alt="" class="image2-invest-in-projects">
+    </section>
+    <!--استثمر في مشاريع واعدة-->
+    <section class="invest-in-projects">
+        <img src="Line pattern.png" alt="lines" class="image1-invest-in-projects">
+        <div class="invest-in-projects-div">
+          <div> <h2>استثمر في مشاريع واعدة</h2></div>
+          <div> <p>فرص استثمارية مدروسة بعناية لتنمية رأس مالك</p></div>
+          <div><button><a href="../contact us page/contactUs.html">اكتشف الفرص</a></button></div>
+        </div>
+        <img src="Line pattern.png" alt="lines" class="image2-invest-in-projects">
     </section>
 
+    <!--النهاية-->
     <footer>
         <div class="footer-container">
             <div class="footer-about">
                 <h4>شريك</h4>
-                <p>شريكك الموثوق في رحلة الاستثمار والنمو المالي.</p>
-                <button><a href="contactus.html">ابدأ الاستثمار الآن</a></button>
+                <p>شريكك الموثوق في رحلة الاستثمار والنمو المالي. <br>
+                    تابع أرباحك، وراقب نمو أموالك بثقة واطمئنان تام.
+                </p>
+                <button><a href="../contact us page/contactUs.html">ابدأ الاستثمار الآن</a></button>
             </div>
+
             <div class="footer-links">
                 <h4>روابط سريعة</h4>
                 <ul>
-                    <li><a href="home.html">الرئيسية</a></li>
-                    <li><a href="shares.html">الاحصة</a></li>
-                    <li><a href="termsofuse.html">الشروط والأحكام</a></li>
-                    <li><a href="contract.html">اتفاقية المستخدم</a></li>
+                    <li><a href="../Home page/Home.html">الرئيسية</a></li>
+                    <li><a href="../shares page/shares.html">الاحصة</a></li>
+                    <li><a href="../terms of use page/termsOfUse.html">الشروط والأحكام</a></li>
+                    <li><a href="../contract page/contract.html">اتفاقية المستخدم</a></li>
                 </ul>
             </div>
+
             <div class="footer-links">
                 <h4>من نحن</h4>
                 <ul>
-                    <li><a href="termsofuse.html">الشروط والأحكام</a></li>
-                    <li><a href="contract.html">اتفاقية المستخدم</a></li>
+                    <li><a href="../terms of use page/termsOfUse.html">الشروط والأحكام</a></li>
+                    <li><a href="../contract page/contract.html">اتفاقية المستخدم</a></li>
                 </ul>
             </div>
+
             <div class="footer-social">
-                <h4>تابعنا</h4>
+                <h4 style="font-weight: 500;">تابعنا</h4>
                 <div class="social-icons">
                     <a href="#"><i class="fab fa-facebook"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
@@ -178,9 +323,14 @@
                 </div>
             </div>
         </div>
+
         <div class="footer-line"></div>
-        <div class="footer-bottom">موقع <strong>شريك.</strong> جميع الحقوق محفوظة. © 2025</div>
+
+        <div class="footer-bottom">
+            موقع <strong>شريك.</strong> جميع الحقوق محفوظة. © 2025
+        </div>
     </footer>
+
 </body>
 
 </html>
